--- a/src/main/webapp/WEB-INF/view/header.html
+++ b/src/main/webapp/WEB-INF/view/header.html
@@ -3,6 +3,7 @@
 	<nav>
 		<a href="index.jsp">Home</a>
 		<a href="gallery.jsp">Gallery</a>
+		<a href="poems.jsp">Poems</a>
 		<a href="search.jsp">Search</a>
 		<a href="aboutUs.html">About Us</a>
 	</nav>
