--- a/src/main/webapp/WEB-INF/view/header.html
+++ b/src/main/webapp/WEB-INF/view/header.html
@@ -2,7 +2,7 @@
 	<h1>AMG ART</h1>
 	<nav>
 		<a href="index.jsp">Home</a>
-		<a href="gallery.jsp">Gallery</a>
+		<a href="WEB-INF/view/gallery.jsp">Gallery</a>
 		<a href="poems.jsp">Poems</a>
 		<a href="search.jsp">Search</a>
 		<a href="aboutUs.html">About Us</a>
